test/lit/pto/issue708_zero_valid_rowexpand_a5_tmp_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --emit-pto-ir %s 2>&1 | FileCheck %s

// The empty-region (0x0) marker accept in verifyTRowExpandReduceLikeOp must not
// short-circuit the arch/operand-form invariants. A5 has no tmp form for these
// ops, so an A5 trowexpandmax with a tmp operand must still be rejected even
// when dst valid_shape is 0x0 -- otherwise it would lower to the A2/A3-only
// 4-operand TROWEXPANDMAX call. The invariant is enforced before the marker
// accept, so this fails as it should.

module attributes {"pto.device-spec" = "Ascend910B3"} {
  func.func @issue708_reject_a5_tmp_zero_valid_trowexpandmax() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %src0 = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=0, v_col=0, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %src1 = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=1, v_row=0, v_col=0, blayout=col_major, slayout=none_box, fractal=512, pad=0>
    %tmp = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=0, v_col=0, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=0, v_col=0, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.trowexpandmax ins(%src0, %src1, %tmp : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=0, v_col=0, blayout=row_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=1, v_row=0, v_col=0, blayout=col_major, slayout=none_box, fractal=512, pad=0>, !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=0, v_col=0, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
                      outs(%dst : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=0, v_col=0, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
    return
  }
}

// CHECK: error: 'pto.trowexpandmax' op expects A5 form to omit tmp
